assets/css/common/header.css
.header-nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    max-width: calc(var(--nav-width) + var(--gap) * 2);
    margin: auto;
    padding: 0 var(--gap);
    column-gap: var(--gap);
}

.header-nav a {
    display: block;
}

.logo,
.menu {
    display: flex;
}

.logo {
    align-items: center;
    column-gap: 0.55rem;
    flex-wrap: wrap;
    margin-top: 13px;
}

.logo-home img {
    border-radius: 6px;
}

.logo a {
    font-size: 24px;
    font-weight: 700;
    display: flex;
    align-items: center;
    column-gap: 0.55rem;
}

.logo a img,
.logo a svg {
    pointer-events: none;
    border-radius: 6px;
}

.theme-toggle {
    padding: 0 0.4rem;
}

[data-theme="dark"] .moon {
    display: none;
}

[data-theme="light"] .sun {
    display: none;
}

.logo-switches {
    display: inline-flex;
    gap: 0.4rem;
    align-items: inherit;
    min-height: stretch;
    flex-wrap: inherit;
}

.logo-switches>* {
    min-height: inherit;
    align-items: center;
    display: inline-flex;
}

.nav-sep {
    color: var(--secondary);
}

.lang-menu * {
    display: inherit;
    min-height: inherit;
    align-items: inherit;
}

.lang-menu a {
    font-size: 1rem;
    font-weight: 500;
    padding: 0 0.4rem;
    display: inline-flex
}

.menu {
    list-style: none;
    word-break: keep-all;
    overflow-x: auto;
    white-space: nowrap;
    column-gap: var(--gap);
    margin-top: 22px;
}

.menu a {
    font-size: 16px;
    padding: 15px;
    height: 50px;
    width: 50px;
    border-radius: 25px;
    color: var(--secondary);
    outline: none;
}

.menu a:hover {
    background: var(--tertiary);
    color: var(--primary);
}

.menu a:focus-visible {
  box-shadow: 0 0 0 2px black inset;
}

:root[data-theme="dark"] .menu a:focus-visible {
  box-shadow: 0 0 0 2px white inset;
}

.menu .active {
    font-weight: 500;
    text-decoration: underline;
    text-underline-offset: 0.3rem;
    text-decoration-thickness: 2px;
}

